Ajuste de nav e relatorio

--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -4,26 +4,36 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<form method="POST" novalidate>
-    {% csrf_token %}
-    {% for field in form.visible_fields %}
-    <div class="form-group{% if field.errors %} has-error
-    {% endif %}">
-        <label for="{{ field.id_for_label }}">
-            {% if field.field.required %}
-            <span class="required">{{ field.label }} </span>
-            {% else %}
-            {{ field.label }}
-            {% endif %}
-        </label>
-        {% render_field field class="form-control" %}
-        {% for error in field.errors %}
-        <span class="text-muted">{{ error }}</span>
+<div class="container-fluid text-center">
+    <br> <br>
+    <form method="POST" novalidate class="sign-in-form">
+        {% csrf_token %}
+        {% for field in form.visible_fields %}
+        <div class="form-floating mb-3">
+            <div class="form-group{% if field.errors %} has-error
+            {% endif %}">
+                <label for="{{ field.id_for_label }}">
+                    {% if field.field.required %}
+                    <span class="required">{{ field.label }} </span>
+                    {% else %}
+                    {{ field.label }}
+                    {% endif %}
+                </label>
+                {% render_field field class="form-control" %}
+                {% for error in field.errors %}
+                <span class="text-muted">{{ error }}</span>
+                {% endfor %}
+            </div>
+        </div>
         {% endfor %}
-    </div>
-    {% endfor %}
-    <button type="submit" class="btn btn-success">Cadastrar</button>
-</form>
+        <button type="submit" class="btn btn-success">Cadastrar</button>
+        <a href="{% url 'cliente:cliente_list' %}">
+            <button type="button" class="btn btn-primary">
+                voltar
+            </button>
+        </a>
+    </form>
+</div>
 {% endif %}
 {% endblock content %}
 
