--- a/projeto/entrada/templates/estoque_entrada_item_form.html
+++ b/projeto/entrada/templates/estoque_entrada_item_form.html
@@ -9,6 +9,10 @@
     .form-control {
     margin: 10px;
     }
+    .form-group {
+    margin: 10px;
+    }
+
 
 </style>
 
@@ -16,14 +20,12 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<a href="{% url 'entrada:estoque_entrada_list' %}">Voltar</a>
-
+<br>
 <div class="row">
     <div class="cols">
         <form method="POST" novalidate>
             {% csrf_token %}
-            <legend style="border-bottom: 1px solid #e5e5e5;">Estoque Entrada
-            </legend>
+            <legend style="border-bottom: 1px solid #e5e5e5;">Estoque Entrada</legend>
 
             <div class="row">
                 <div class="col-sm-6">
