--- a/projeto/cliente/templates/cliente_confirm_delete.html
+++ b/projeto/cliente/templates/cliente_confirm_delete.html
@@ -2,28 +2,24 @@
 
 {% block content %}
 <form method="post">{% csrf_token %}
-{% if user.is_authenticated %}
-
-
-
-<p>Tem certeza que deseja excluir esse cliente? <h1>'{{ object }}'</h1></p>
-
-
-
-
+    {% if user.is_authenticated %}
+    <p>Tem certeza que deseja excluir esse cliente?
+    <h1>'{{ object }}'</h1></p>
     <a href="{% url 'cliente:confirm_cliente_delete' object.id %}" class="btn btn-info btn-lg">Excluir</a>
 </form>
- {% endif %}
- {% endblock content %}
+
+{% endif %}
+{% endblock content %}
 
 {% block js %}
 
- <script>
+<script>
      //Close alert after 2 second
      window.setTimeout(function() {
      $('.alert').fadeTo(500, 0).slideUp(500, function() {
             $(this).remove();
         });
      }, 2000);
- </script>
+
+</script>
 {% endblock js %}
