--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 
- {% block content %}
+{% block content %}
 
- {% for message in messages %}
-    {% if 'success' in message.tags %}
-        <p class="alert alert-success" role="alert"><span style="font-weight: bold">{{ message }}</span> </p>
-    {% else %}
-         <p class="alert alert-danger" role="alert"><span style="font-weight: bold">{{ message }}</span> </p>
-    {% endif %}
- {% endfor %}
+{% for message in messages %}
+{% if 'success' in message.tags %}
+<p class="alert alert-success" role="alert"><span style="font-weight: bold">{{ message }}</span></p>
+{% else %}
+<p class="alert alert-danger" role="alert"><span style="font-weight: bold">{{ message }}</span></p>
+{% endif %}
+{% endfor %}
 
 <div class="page-header">
     {% if user.is_authenticated %}
     <h2>Lista de Clientes
-        <span class="float-right">
+        <span class="float-center">
             <a href="{% url 'cliente:cliente_add' %}">
                 <button type="button" class="btn btn-primary">
                  <span class="fa fa-plus"></span> Adicionar
@@ -30,16 +30,28 @@
             <th>Cliente</th>
             <th class="text-center">Telefone</th>
             <th class="text-center">Data</th>
+            <th class="text-center">Ações</th>
         </tr>
         </thead>
         <tbody>
-           {% for object in object_list %}
-            <tr>
-                <td><a href="{{ object.get_absolute_url }}">{{ object.cliente }}</a></td>
-                <td class="text-center">{{ object.telefone }}</td>
-                <td class="text-center">{{ object.data_cliente }}</td>
-            </tr>
-           {% endfor %}
+        {% for object in object_list %}
+        <tr>
+            <td><a href="{{ object.get_absolute_url }}">{{ object.cliente }}</a></td>
+            <td class="text-center">{{ object.telefone }}</td>
+            <td class="text-center">{{ object.data_cliente }}</td>
+            <td class="text-center">
+                <a href="{{ object.get_absolute_url }}" class="edit">
+                    <i class="material-icons" data-toggle="tooltip" title="Editar">summarize</i>
+                </a>
+                <a href="{% url 'cliente:cliente_edit' object.pk %}" class="edit">
+                    <i class="material-icons" data-toggle="tooltip" title="Editar">&#xE254;</i>
+                </a>
+                <a href="{% url 'cliente:cliente_delete' object.pk %}">
+                    <span class="material-icons">delete</span>
+                </a>
+            </td>
+        </tr>
+        {% endfor %}
         </tbody>
     </table>
     {% else %}
