--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -1,77 +1,133 @@
-<!--https://getbootstrap.com/docs/4.0/getting-started/introduction/#starter-template-->
-<!doctype html>
 {% load static %}
+<!DOCTYPE html>
+{% load static %}
+<html lang="pt-br">
+<head>
 
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <link rel="shortcut icon" href="https://www.djangoproject.com/favicon.ico">
-       <title>Estoque</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Controle de Estoque</title>
+    {% block link %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--fon awesome-->
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    {% endblock link %}
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="https://www.djangoproject.com/favicon.ico">
+    <!--Select2-->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
-      <!--Select2-->
-      <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    {% block css %}{% endblock css %}
+    <style>
+        body {
+            background: #D3D3D3;
+        }
+        .box {
+            background: #fff;
+            width: 1400px;
+            height: 800px;
+            position: 0;
+            left: 0;
+            right: 0;
+            top: 0;
 
+            margin: auto;
+        }
+        .box-radius {
+            border-radius: 100px;
+        }
+        a{
+            color: #000000;
+        }
+    </style>
+</head>
+<body>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="{% url 'core:index' %}">Controle de Estoque</a>
 
-     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% if user.is_authenticated %}
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'core:index' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">Produtos</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="{% url 'produto:produto_add' %}">Cadastrar Produto</a>
+                    <a class="dropdown-item" href="{% url 'produto:produto_list' %}">Listar Produtos</a>
+                    <a class="dropdown-item" href="{% url 'relatorio:relatorio_produto' %}">Relatório Produto</a>
+                </div>
+            </li>
+            <li class="nav-item active dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">Clientes</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="{% url 'cliente:cliente_add' %}">Cadastrar Clientes</a>
+                    <a class="dropdown-item" href="{% url 'cliente:cliente_list' %}">Listar Clientes</a>
+                    <a class="dropdown-item" href="{% url 'relatorio:relatorio_cliente' %}">Relatório Clientes</a>
+                </div>
+            </li>
+            <li class="nav-item active dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">Entrada</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="{% url 'entrada:estoque_entrada_add' %}">Nova Entrada</a>
+                    <a class="dropdown-item" href="{% url 'entrada:estoque_entrada_list' %}">Listar Entradas</a>
+                    <a class="dropdown-item" href="{% url 'relatorio:relatorio_entrada' %}">Relatório Entrada</a>
+                </div>
+            </li>
+            <li class="nav-item active dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">Saida</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="{% url 'saida:estoque_saida_add' %}">Nova Saída</a>
+                    <a class="dropdown-item" href="{% url 'saida:estoque_saida_list' %}">Listar Saídas</a>
+                    <a class="dropdown-item" href="{% url 'relatorio:relatorio_saida' %}">Relatório Saídas</a>
+                </div>
+            </li>
 
-     {% block 'conteudo' %} {% block css %} {%  endblock css %} {% endblock %}
+        </ul>
+        <ul class="navbar-nav  px-3">
+            <li class="nav-item active">
+                <a href="{% url 'usuarios:sair' %}" class="nav-link">
+                    {{user}}/Sair
+                </a>
+            </li>
+        </ul>
 
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="{% url 'core:index' %}">Controle de Estoque</a>
-
-        {% if user.is_authenticated %}
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'core:index' %}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'produto:produto_list' %}">Produtos</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'cliente:cliente_list' %}">Cliente</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'entrada:estoque_entrada_list' %}">Entrada</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'saida:estoque_saida_list' %}">Saida</a>
-                </li>
-
-            </ul>
-            <ul class="navbar-nav px-3">
-                <li class="nav-item text-nowrap">
-                    <a href="{% url 'usuarios:sair' %}" class="nav-link">{{user.username}}/Sair</a>
-                </li>
-            </ul>
-
-            {% endif %}
-            </div>
-    </nav>
-
-    <div class="container">
+        {% endif %}
+    </div>
+</nav>
+<br> <br> <br> <br>
+<div class="box box-radius">
+    <div class="container-fluid text-center">
         {% block content %} {% endblock content %}
     </div>
+</div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-     <!-- Select2 -->
-     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
-     {% block js %} {%  endblock js %}
-
-  </body>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+<!-- Select2 -->
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+{% block js %} {% endblock js %}
+</body>
 </html>
