--- a/projeto/entrada/templates/estoque_entrada_list.html
+++ b/projeto/entrada/templates/estoque_entrada_list.html
@@ -1,45 +1,66 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
-{% if user.is_authenticated %}
-<h2>Estoque Entrada
-        <span class="float-right">
+{% block css %}
+
+<style>
+    .dark{
+                color: #000000;
+            }
+
+
+
+</style>
+
+{% endblock css %}
+
+<div class="page-header">
+    {% if user.is_authenticated %}
+    <h2>Estoque Entrada
+        <span class="float-center">
             <a href="{% url 'entrada:estoque_entrada_add' %}">
                 <button type="button" class="btn btn-primary">
                  <span class="fa fa-plus"></span> Adicionar
                 </button>
             </a>
-        </span>
+    </span>
     </h2>
 
-{% if object_list %}
+    {% if object_list %}
 
     <table class="table table-striped">
         <thead>
         <tr>
             <th>Item</th>
             <th>NfF</th>
-            <th>Data</th>
+            <th>Ações</th>
         </tr>
         </thead>
         <tbody>
-         {% for object in object_list %}
-         <tr>
-             <td>
-                 <a href="{% url 'entrada:estoque_entrada_detail' object.pk %}">{{ object }}</a>
-             </td>
-             <td>{{ object.nf_formated }}</td>
-              <td>{{ object.created }}</td>
+        {% for object in object_list %}
+        <tr>
+            <td><a href="{% url 'entrada:estoque_entrada_detail' object.pk %}">{{ object }}</a></td>
+            <td>{{ object.nf_formated }}</td>
+            <td>
+                <a href="{% url 'entrada:estoque_entrada_detail' object.pk %}" class="edit">
+                    <i class="material-icons" data-toggle="tooltip" title="Editar">summarize</i>
+                </a>
+                <a href="{% url 'entrada:estoque_entrada_delete' object.pk %}">
+                    <span class="material-icons">delete</span>
+                </a>
+            </td>
 
-         </tr>
+        </tr>
         {% endfor %}
 
         </tbody>
     </table>
-{% endif %}
-{% else %}
+    {% endif %}
+    {% else %}
+    <br> <br> <br>
     <p class="alert alert-warning">Sem itens na lista </p>
-{% endif %}
+    {% endif %}
+</div>
 <div class="row text-center">
   <div class="col-lg-12">
     <ul class="pagination">
@@ -71,3 +92,14 @@
 </div>
 
 {% endblock content %}
+{% block js %}
+
+ <script>
+     //Close alert after 2 second
+     window.setTimeout(function() {
+     $('.alert').fadeTo(500, 0).slideUp(500, function() {
+            $(this).remove();
+        });
+     }, 2000);
+ </script>
+{% endblock js %}
