--- a/projeto/produto/templates/produto_list.html
+++ b/projeto/produto/templates/produto_list.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 
- {% block content %}
+{% block content %}
 
- {% for message in messages %}
-    {% if 'success' in message.tags %}
-        <p class="alert alert-success" role="alert"><span style="font-weight: bold">{{ message }}</span> </p>
-    {% else %}
-         <p class="alert alert-danger" role="alert"><span style="font-weight: bold">{{ message }}</span> </p>
-    {% endif %}
- {% endfor %}
+{% for message in messages %}
+{% if 'success' in message.tags %}
+<p class="alert alert-success" role="alert"><span style="font-weight: bold">{{ message }}</span></p>
+{% else %}
+<p class="alert alert-danger" role="alert"><span style="font-weight: bold">{{ message }}</span></p>
+{% endif %}
+{% endfor %}
 
 <div class="page-header">
     {% if user.is_authenticated %}
     <h2>Lista de Produtos
-        <span class="float-right">
+        <span class="float-center">
             <a href="{% url 'produto:produto_add' %}">
                 <button type="button" class="btn btn-primary">
                  <span class="fa fa-plus"></span> Adicionar
@@ -32,21 +32,34 @@
             <th class="text-center">Estoque</th>
             <th class="text-center">Estoque Mínimo</th>
             <th class="text-center">Data</th>
+            <th class="text-center">Ações</th>
         </tr>
         </thead>
         <tbody>
-           {% for object in object_list %}
-            <tr>
-                <td><a href="{{ object.get_absolute_url }}">{{ object.produto }}</a></td>
-                <td>R$<span class="pull-right">{{ object.preco }}</span></td>
-                <td class="text-center">{{ object.estoque }}</td>
-                <td class="text-center">{{ object.estoque_minimo }}</td>
-                <td class="text-center">{{ object.data }}</td>
-            </tr>
-           {% endfor %}
+        {% for object in object_list %}
+        <tr>
+            <td><a href="{{ object.get_absolute_url }}">{{ object.produto }}</a></td>
+            <td>R$<span class="pull-right">{{ object.preco }}</span></td>
+            <td class="text-center">{{ object.estoque }}</td>
+            <td class="text-center">{{ object.estoque_minimo }}</td>
+            <td class="text-center">{{ object.data }}</td>
+            <td class="text-center">
+                <a href="{{ object.get_absolute_url }}" class="edit">
+                    <i class="material-icons" data-toggle="tooltip" title="Editar">summarize</i>
+                </a>
+                <a href="{% url 'produto:produto_edit' object.pk %}" class="edit">
+                    <i class="material-icons" data-toggle="tooltip" title="Editar">&#xE254;</i>
+                </a>
+                <a href="{% url 'produto:produto_delete' object.pk %}">
+                    <span class="material-icons">delete</span>
+                </a>
+            </td>
+        </tr>
+        {% endfor %}
 
         </tbody>
     </table>
+
     {% else %}
     <p class="alert alert-warning">Sem itens na lista.</p>
     {% endif %}
