--- a/projeto/relatorio/templates/relatorio_produto.html
+++ b/projeto/relatorio/templates/relatorio_produto.html
@@ -1,64 +1,57 @@
 {% extends "base.html" %}
-
 {% block content %}
-{% if user.is_authenticated %}
 
-<div class="page-header">
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+<br>
+<div class="limiter">
+    {% if user.is_authenticated %}
     <div id="relatorio_itens">
-        <h1>{{ object }}</h1>
-        <table class="table table-user-information">
+
+                    <span class="login100-form-title pb-3">
+                        <h2>Lista de Produtos Cadastrados</h2>
+                    </span>
+        {% if object_list %}
+        <table class="table table-striped table-light w-100 table-hover table-responsive-sm text-justify">
+            <thead>
+            <tr>
+                <th>Produto</th>
+                <th>Preço</th>
+                <th class="text-center">Estoque</th>
+                <th class="text-center">Estoque Mínimo</th>
+                <th class="text-center">Data</th>
+            </tr>
+            </thead>
             <tbody>
+            {% for object in object_list %}
             <tr>
-                <th class="text-right"> Telefone</th>
-                <td>R$ {{ object.telefone }}</td>
+                <td>{{ object.produto }}</td>
+                <td>R$<span class="pull-right">{{ object.preco }}</span></td>
+                <td class="text-center">{{ object.estoque }}</td>
+                <td class="text-center">{{ object.estoque_minimo }}</td>
+                <td class="text-center">{{ object.data }}</td>
             </tr>
-            <tr>
-                <th class="text-right"> Cep</th>
-                <td> {{ object.cep }}</td>
-            </tr>
-            <tr>
-                <th class="text-right"> Rua</th>
-                <td> {{ object.rua }}</td>
-            </tr>
-            <tr>
-                <th class="text-right"> Numero</th>
-                <td> {{ object.numero }}</td>
-            </tr>
-            <tr>
-                <th class="text-right"> Data</th>
-                <td> {{ object.data_cliente }}</td>
-            </tr>
+            {% endfor %}
             </tbody>
         </table>
+        {% endif %}
+        {% else %}
+        <br> <br> <br>
+        <p class="alert alert-warning">Sem itens na lista </p>
+        {% endif %}
     </div>
-
+    <hr>
     <div class="buttons m-auto">
         <div class="container-login100-form-btn">
             <button class="btn btn-primary" value="Save" onclick="printDiv()">
                 Gerar relatório
             </button>
-            <span class="float-right">
-                <a href="{% url 'cliente:cliente_list' %}">
-                    <button type="button" class="btn btn-primary">
-                        voltar
-                    </button>
-                </a>
-                <a href="{% url 'cliente:cliente_edit' object.pk %}">
-                    <button type="button" class="btn btn-success">
-                        Editar
-                    </button>
-                </a>
-                <a href="{% url 'cliente:cliente_delete' object.pk %}">
-                    <button type="button" class="btn btn-success">
-                        Deletar
-                    </button>
-                </a>
-            </span>
         </div>
     </div>
+
 </div>
-{% endif %}
-{% endblock content %}
+{% endblock %}
 {% block js %}
 <script>
     function printDiv() {
@@ -78,7 +71,6 @@
 
         setTimeout(function () { a.print(); }, 1000);
     }
-
 
 
 
