--- a/projeto/saida/templates/estoque_saida_detail.html
+++ b/projeto/saida/templates/estoque_saida_detail.html
@@ -2,56 +2,88 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-    <span class="float-right">
-        <a href="{% url 'saida:estoque_saida_list' %}">
-                <button type="button" class="btn btn-primary">
-                  voltar
-                </button>
-        </a>
-        <a href="{% url 'saida:estoque_saida_delete' object.pk %}">
-             <button type="button" class="btn btn-success">
-                 <span class="fa fa-pencil"></span>Deletar
-             </button>
-         </a>
-    </span>
+<div class="limiter">
+    <div id="relatorio_itens">
+        <h1>Saida: {{ object }}</h1>
 
+        <div class="col-sm-6">
+            <table class="table table-user-information">
+                <tbody>
+                <tr>
+                    <th class="text-right">NF</th>
+                    <td>{{ object.nf_formated }}</td>
+                </tr>
+                <tr>
+                    <th class="text-right">Data</th>
+                    <td>{{ object.created }}</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
 
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Produto</th>
+                <th>Quantidade</th>
+                <th>Saldo</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for obj in object.estoques.all %}
+            <tr>
+                <td>{{ obj.produto }}</td>
+                <td>{{ obj.quantidade }}</td>
+                <td>{{ obj.saldo }}</td>
+            </tr>
 
-<h1>Entrada: {{ object }}</h1>
-
-<div class="col-sm-6">
-    <table class="table table-user-information">
-        <tbody>
-        <tr>
-           <th class="text-right">NF</th>
-            <td>{{ object.nf_formated }}</td>
-        </tr>
-        <tr>
-           <th class="text-right">Data</th>
-            <td>{{ object.created }}</td>
-        </tr>
-        </tbody>
-    </table>
+            {% endfor %}
+            </tbody>
+        </table>
+        {% endif %}
+    </div>
+    <hr>
+    <div class="buttons m-auto">
+        <div class="container-login100-form-btn">
+            <button class="btn btn-primary" value="Save" onclick="printDiv()">
+                Gerar relatório
+            </button>
+            <span class="float-right">
+                <a href="{% url 'saida:estoque_saida_list' %}">
+                    <button type="button" class="btn btn-primary">
+                        voltar
+                    </button>
+                </a>
+                <a href="{% url 'saida:estoque_saida_delete' object.pk %}">
+                    <button type="button" class="btn btn-success">
+                        Deletar
+                    </button>
+                </a>
+            </span>
+        </div>
+    </div>
 </div>
-
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th>Produto</th>
-        <th>Quantidade</th>
-        <th>Saldo</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for obj in object.estoques.all %}
-        <tr>
-            <td>{{ obj.produto }}</td>
-            <td>{{ obj.quantidade }}</td>
-            <td>{{ obj.saldo }}</td>
-        </tr>
-
-    {% endfor %}
-    </tbody>
-</table>
-{% endif %}
 {% endblock content %}
+
+
+{% block js %}
+<script>
+    function printDiv() {
+        var divContents = document.getElementById("relatorio_itens").innerHTML;
+        var a = window.open('', '', 'height=600px, width=1000px');
+        a.document.write('<html>');
+        a.document.write('<head>');
+        a.document.write('<link rel="stylesheet" href="../static/css/listas/listas.css">');
+        a.document.write('<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">');
+        a.document.write('<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"><' + '/script>');
+        a.document.write('</head>');
+        a.document.write('<body style="text-align:center;"');
+        a.document.write(divContents);
+        a.document.write('</body>');
+        a.document.write('</html>');
+        a.document.close();
+
+        setTimeout(function () { a.print(); }, 1000);
+    }
+</script>
+{% endblock js %}
