--- a/projeto/saida/templates/estoque_saida_item_form.html
+++ b/projeto/saida/templates/estoque_saida_item_form.html
@@ -9,6 +9,9 @@
     .form-control {
     margin: 10px;
     }
+    .form-group {
+    margin: 10px;
+    }
 
 </style>
 
@@ -16,8 +19,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<a href="{% url 'saida:estoque_saida_list' %}">Voltar</a>
-
+<br>
 <div class="row">
     <div class="cols">
         <form method="POST" novalidate>
