--- a/projeto/usuarios/templates/cadastro.html
+++ b/projeto/usuarios/templates/cadastro.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'login.html' %}
 
 {% block 'titulo' %}Cadastro{% endblock %}
 
@@ -7,19 +7,16 @@
     <br>
 
     {% if messages %}
-      {% for i in messages %}   
-          <div class="alert {{i.tags}}" role="alert">
-              {{i}} 
-          </div>
+    {% for i in messages %}
+    <div class="alert {{i.tags}}" role="alert">
+        {{i}}
+    </div>
 
-      {% endfor %}
+    {% endfor %}
     {% endif %}
 
-
     <div class="row">
-        <div class="col-md-3">
-        </div>
-
+        <div class="col-md-3"></div>
         <div class="col-md">
             <h1>Cadastre-se</h1>
             <hr>
@@ -36,21 +33,10 @@
                 <hr>
                 <input class="btn btn-success btn-lg" type="submit" value="Enviar">
                 <a href="{% url 'usuarios:login' %}" class="btn btn-info btn-lg">Login</a>
-
-
             </form>
-        
         </div>
-
-        <div class="col-md-3">
-        </div>
-
-
+        <div class="col-md-3"></div>
     </div>
-
-
 </div>
 
-
-
-{% endblock %}
+{% endblock 'conteudo'%}
