--- a/projeto/usuarios/templates/login.html
+++ b/projeto/usuarios/templates/login.html
@@ -1,47 +1,79 @@
-{% extends 'base.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{% block 'titulo' %}Login{% endblock %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <title>{% block 'titulo' %}{% endblock %}</title>
+    <style>
+    body{
+            background: #D3D3D3;
+        }
+        .box {
+            background: #fff;
+            width: 1400px;
+            height: 800px;
+            position: 0;
+            left: 0;
+            right: 0;
+            top: 0;
 
-{% block 'conteudo' %}
+            margin: auto;
+        }
+        .box-radius {
+            border-radius: 100px;
+        }
 
-<div class="container">
-    <br>
-    {% if messages %}
-        {% for i in messages %}   
-            <div class="alert {{i.tags}}" role="alert">
-                {{i}} 
-            </div>
-        {% endfor %}
 
-    {% endif %}
-    <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md">
-            <h1>Login</h1>
-            <br>
-            <hr>
-            <form method="POST" action="{% url 'usuarios:valida_login' %}">
-                {% csrf_token %}
-                <label>Nome:</label>
-                <input name="nome" class="form-control" type="text" placeholder="Nome...">
-                <br>
-                <label>Senha:</label>
-                <input name="senha" class="form-control" type="password" placeholder="Senha...">
-                <br>
-                <input class="btn btn-success btn-lg" type="submit" value="Enviar">
-                <a href="{% url 'usuarios:cadastro' %}" class="btn btn-info btn-lg">Cadastre-se</a>
-            </form>
+    </style>
+</head>
+</head>
+<body>
+<br> <br>
+<div class="box box-radius">
+    <div class="container">
+        {% block 'conteudo'%}
+        <br>
+        {% if messages %}
+        {% for i in messages %}
+        <div class="alert {{i.tags}}" role="alert">
+            {{i}}
         </div>
-        <div class="col-md-3"></div>
+        {% endfor %}
+        <div class="forms-container">
+            <div class="signin-signup">
+
+                {% endif %}
+                <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="col-md">
+                        <h1>Login</h1>
+                        <hr>
+                        <form method="POST" action="{% url 'usuarios:valida_login' %}" class="sign-in-form">
+                            {% csrf_token %}
+                            <label>Nome:</label>
+                            <input name="nome" class="form-control" type="text" placeholder="Nome...">
+                            <br>
+                            <label>Senha:</label>
+                            <input name="senha" class="form-control" type="password" placeholder="Senha...">
+                            <br>
+                            <input class="btn btn-success btn-lg" type="submit" value="Enviar">
+                            <a href="{% url 'usuarios:cadastro' %}" class="btn btn-info btn-lg">Cadastre-se</a>
+                        </form>
+                    </div>
+                    <div class="col-md-3"></div>
+                </div>
+            </div>
+            {% endblock 'conteudo'%}
+        </div>
     </div>
 
-
 </div>
+</body>
+</html>
 
 
-
-
-
-
-
-{% endblock %}
