filtro entrada e saida ajustados

--- a/projeto/saida/templates/estoque_saida_detail.html
+++ b/projeto/saida/templates/estoque_saida_detail.html
@@ -17,6 +17,10 @@
                     <th class="text-right">Data</th>
                     <td>{{ object.created }}</td>
                 </tr>
+                <tr>
+                    <th class="text-right">Cliente</th>
+                    <td>{{ object.cliente }}</td>
+                </tr>
                 </tbody>
             </table>
         </div>
