--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -1,43 +1,60 @@
 {% extends "base.html" %}
 {% load static %}
 {% load widget_tweaks %}
-
+{% load bootstrap %}
 {% block content %}
 {% if user.is_authenticated %}
-<div class="container-fluid text-center">
-    <br> <br>
-    <form method="POST" novalidate class="sign-in-form">
-        {% csrf_token %}
-        {% for field in form.visible_fields %}
-        <div class="form-floating mb-3">
-            <div class="form-group{% if field.errors %} has-error
-            {% endif %}">
-                <label for="{{ field.id_for_label }}">
-                    {% if field.field.required %}
-                    <span class="required">{{ field.label }} </span>
-                    {% else %}
-                    {{ field.label }}
-                    {% endif %}
-                </label>
-                {% render_field field class="form-control" %}
-                {% for error in field.errors %}
-                <span class="text-muted">{{ error }}</span>
+<br>
+
+<div class="row">
+    <div class="cols">
+        <form method="POST" novalidate action="{% url 'cliente:cliente_add' %}">
+            {% csrf_token %}
+            {% if form.errors %}
+            <div class="alert alert-danger">
+                {% for field, errors in form.errors.items %}
+                <strong>{{ field }}:</strong>
+                {% for error in errors %}
+                {{ error }}
+                {% endfor %}
                 {% endfor %}
             </div>
-        </div>
-        {% endfor %}
-        <button type="submit" class="btn btn-success">Cadastrar</button>
-        <a href="{% url 'cliente:cliente_list' %}">
-            <button type="button" class="btn btn-primary">
-                voltar
-            </button>
-        </a>
-    </form>
+            {% endif %}
+            <legend style="border-bottom: 1px solid #e5e5e5;">Cadastro Cliente</legend>
+            <br> <br>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="{{ form.cliente.id_for_label }}">Nome</label>
+                    {{ form.cliente|add_class:"form-control" }}
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="{{ form.telefone.id_for_label }}">Telefone</label>
+                    {{ form.telefone|add_class:"form-control" }}
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="{{ form.rua.id_for_label }}">Endereço</label>
+                    {{ form.rua|add_class:"form-control" }}
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="{{ form.numero.id_for_label }}">Número</label>
+                    {{ form.numero|add_class:"form-control" }}
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="{{ form.cep.id_for_label }}">CEP</label>
+                    {{ form.cep|add_class:"form-control" }}
+                </div>
+            </div>
+            <button type="submit" class="btn btn-success">Cadastrar</button>
+            <a href="{% url 'cliente:cliente_list' %}">
+                <button type="button" class="btn btn-primary">
+                    Voltar
+                </button>
+            </a>
+        </form>
+    </div>
 </div>
+
 {% endif %}
 {% endblock content %}
-
-{% block js %}
-
-
-{% endblock js %}
