--- a/projeto/produto/templates/produto_form.html
+++ b/projeto/produto/templates/produto_form.html
@@ -1,38 +1,58 @@
 {% extends "base.html" %}
 {% load static %}
 {% load widget_tweaks %}
-
+{% load bootstrap %}
 {% block content %}
 {% if user.is_authenticated %}
- <div class="container-fluid text-center">
-     <br> <br>
-    <form class="form-floating" method="POST" novalidate>
-        {% csrf_token %}
-        {% for field in form.visible_fields %}
-        <div class="form-floating mb-3">
-            <div class="form-group{% if field.errors %} has-error
-            {% endif %}">
-                <label for="exampleFormControlInput1" class="form-label">
-                    {% if field.field.required %}
-                    <span class="required">{{ field.label }} </span>
-                    {% else %}
-                    {{ field.label }}
-                    {% endif %}
-                </label>
-                {% render_field field class="form-control" %}
-                {% for error in field.errors %}
-                <span class="text-muted">{{ error }}</span>
+<br>
+<div class="row">
+    <div class="cols">
+        <form method="POST" novalidate action="{% url 'cliente:cliente_add' %}">
+            {% csrf_token %}
+            {% if form.errors %}
+            <div class="alert alert-danger">
+                {% for field, errors in form.errors.items %}
+                <strong>{{ field }}:</strong>
+                {% for error in errors %}
+                {{ error }}
+                {% endfor %}
                 {% endfor %}
             </div>
-        </div>
-        {% endfor %}
-        <button type="submit" class="btn btn-success">Cadastrar</button>
-        <a href="{% url 'produto:produto_list' %}">
+            {% endif %}
+            <legend style="border-bottom: 1px solid #e5e5e5;">Cadastro Produto</legend>
+            <br> <br>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="{{ form.produto.id_for_label }}">Nome</label>
+                    {{ form.produto|add_class:"form-control" }}
+                </div>
+
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="{{ form.preco.id_for_label }}">Preço</label>
+                    {{ form.preco|add_class:"form-control" }}
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="{{ form.estoque.id_for_label }}">Estoque</label>
+                    {{ form.estoque|add_class:"form-control" }}
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="{{ form.estoque_minimo.id_for_label }}">Estoque Minimo</label>
+                    {{ form.estoque_minimo|add_class:"form-control" }}
+                </div>
+            </div>
+            <button type="submit" class="btn btn-success">Cadastrar</button>
+            <a href="{% url 'cliente:cliente_list' %}">
                 <button type="button" class="btn btn-primary">
-                  voltar
+                    Voltar
                 </button>
-         </a>
-    </form>
- </div>
+            </a>
+        </form>
+    </div>
+</div>
 {% endif %}
 {% endblock content %}
+
