--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -4,8 +4,6 @@
 {% load bootstrap %}
 {% block content %}
 {% if user.is_authenticated %}
-<br>
-
 <div class="row">
     <div class="cols">
         <form method="POST" novalidate action="{% url 'cliente:cliente_add' %}">
@@ -20,7 +18,7 @@
                 {% endfor %}
             </div>
             {% endif %}
-            <legend style="border-bottom: 1px solid #e5e5e5;">Cadastro Cliente</legend>
+            <h3 style="border-bottom: 1px solid #e5e5e5;">Cadastro Cliente</h3>
             <br> <br>
             <div class="form-row">
                 <div class="form-group col-md-6">
@@ -48,7 +46,7 @@
             </div>
             <button type="submit" class="btn btn-success">Cadastrar</button>
             <a href="{% url 'cliente:cliente_list' %}">
-                <button type="button" class="btn btn-primary">
+                <button type="button" class="btn btn-primary" id="cancelar-btn">
                     Voltar
                 </button>
             </a>
@@ -58,3 +56,13 @@
 
 {% endif %}
 {% endblock content %}
+{% block js %}
+<script>
+    $(document).ready(function() {
+        $('#cancelar-btn').click(function(ev) {
+            ev.preventDefault();
+            window.history.back();
+        });
+    });
+</script>
+{% endblock js %}
