--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-
 {% block content %}
-
+{% load static %}
+{% load widget_tweaks %}
+{% load bootstrap %}
 {% for message in messages %}
 {% if 'success' in message.tags %}
 <p class="alert alert-success" role="alert"><span style="font-weight: bold">{{ message }}</span></p>
@@ -9,11 +10,11 @@
 <p class="alert alert-danger" role="alert"><span style="font-weight: bold">{{ message }}</span></p>
 {% endif %}
 {% endfor %}
-<br>
+
 <div class="page-header">
     {% if user.is_authenticated %}
 
-    <h2>Lista de Clientes
+    <h3>Lista de Clientes
         <span class="float-center">
             <a href="{% url 'cliente:cliente_add' %}">
                 <button type="button" class="btn btn-primary">
@@ -21,7 +22,7 @@
                 </button>
             </a>
         </span>
-    </h2>
+    </h3>
 
     {% if object_list %}
 
