--- a/projeto/saida/templates/estoque_saida_item_form.html
+++ b/projeto/saida/templates/estoque_saida_item_form.html
@@ -19,12 +19,11 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<br>
 <div class="row">
     <div class="cols">
         <form method="POST" novalidate>
             {% csrf_token %}
-            <legend style="border-bottom: 1px solid #e5e5e5;">Estoque Saida</legend>
+            <h3 style="border-bottom: 1px solid #e5e5e5;">Estoque Saida</h3>
 
             <div class="row">
                 <div class="col-sm-6">
@@ -68,7 +67,8 @@
                         <button class="btn btn-primary" value="Save">
                             <i class="fa fa-floppy-o"></i>Salvar
                         </button>
-                        <a href="{% url 'saida:estoque_saida_list' %}" class="btn btn-danger">
+
+                        <a href="{% url 'saida:estoque_saida_list' %}" class="btn btn-danger" id="cancelar-btn">
                             <i class="fa fa-times"></i>
                             Cancelar
                         </a>
@@ -82,7 +82,14 @@
 {% endblock content %}
 
 {% block js %}
-
+<script>
+    $(document).ready(function() {
+        $('#cancelar-btn').click(function(ev) {
+            ev.preventDefault();
+            window.history.back();
+        });
+    });
+</script>
 <script>
      $(document).ready(function() {
 
