--- a/projeto/usuarios/templates/login.html
+++ b/projeto/usuarios/templates/login.html
@@ -1,79 +1,53 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-    <title>{% block 'titulo' %}{% endblock %}</title>
-    <style>
-    body{
-            background: #D3D3D3;
-        }
-        .box {
-            background: #fff;
-            width: 1400px;
-            height: 800px;
-            position: 0;
-            left: 0;
-            right: 0;
-            top: 0;
-
-            margin: auto;
-        }
-        .box-radius {
-            border-radius: 100px;
-        }
-
-
-    </style>
-</head>
+    <!-- Design by foolishdeveloper.com -->
+    <title>{% block 'title'%}Login Page {% endblock 'title'%}</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <!--Stylesheet-->
+    {% block 'style'%}
+    <link rel="stylesheet" href="{% static 'css/loginStyle.css' %}">
+    {% endblock 'style'%}
 </head>
 <body>
-<br> <br>
-<div class="box box-radius">
-    <div class="container">
-        {% block 'conteudo'%}
-        <br>
-        {% if messages %}
-        {% for i in messages %}
-        <div class="alert {{i.tags}}" role="alert">
-            {{i}}
-        </div>
-        {% endfor %}
-        <div class="forms-container">
-            <div class="signin-signup">
-
-                {% endif %}
-                <div class="row">
-                    <div class="col-md-3"></div>
-                    <div class="col-md">
-                        <h1>Login</h1>
-                        <hr>
-                        <form method="POST" action="{% url 'usuarios:valida_login' %}" class="sign-in-form">
-                            {% csrf_token %}
-                            <label>Nome:</label>
-                            <input name="nome" class="form-control" type="text" placeholder="Nome...">
-                            <br>
-                            <label>Senha:</label>
-                            <input name="senha" class="form-control" type="password" placeholder="Senha...">
-                            <br>
-                            <input class="btn btn-success btn-lg" type="submit" value="Enviar">
-                            <a href="{% url 'usuarios:cadastro' %}" class="btn btn-info btn-lg">Cadastre-se</a>
-                        </form>
-                    </div>
-                    <div class="col-md-3"></div>
-                </div>
-            </div>
-            {% endblock 'conteudo'%}
-        </div>
-    </div>
-
+<div class="background">
+    <div class="shape"></div>
+    <div class="shape"></div>
 </div>
+{% block 'conteudo'%}
+<form method="POST" action="{% url 'usuarios:valida_login' %}" class="sign-in-form">
+
+    <h3>Faça o Login Aqui</h3>
+    {% csrf_token %}
+    {% if messages %}
+    {% for i in messages %}
+    <div class="alert {{i.tags}}" role="alert">
+        {{i}}
+    </div>
+    {% endfor %}
+    {% endif %}
+
+    <label for="username">Nome de Usuário</label>
+    <input type="text" placeholder="Digite o nome de usuário" id="username" name="username_or_email">
+
+    <label for="password">Senha</label>
+    <input type="password" placeholder="Senha" id="password" name="senha">
+
+    <button type="submit">Iniciar Sessão</button>
+    <!--        <input type="button" value="">-->
+    <div class="social">
+        <div class="go"><i class="fab fa-google"></i> Google</div>
+        <div class="fb"><i class="fab fa-facebook"></i> Facebook</div>
+    </div>
+    <a href="{% url 'usuarios:cadastro' %}">Criar Conta</a>
+</form>
+{% endblock 'conteudo'%}
+
+
 </body>
 </html>
-
-
