--- a/projeto/entrada/templates/estoque_entrada_item_form.html
+++ b/projeto/entrada/templates/estoque_entrada_item_form.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% load widget_tweaks %}
 {% load bootstrap %}
-{% block css %}
 
+{% block css %}
 <style>
     .form-control {
     margin: 10px;
@@ -11,9 +11,7 @@
     .form-group {
     margin: 10px;
     }
-
 </style>
-
 {% endblock css %}
 
 {% block content %}
@@ -26,12 +24,12 @@
             <h3 style="border-bottom: 1px solid #e5e5e5;">Estoque Entrada</h3>
 
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                     {% for field in form.visible_fields %}
                     <div class="form-group{% if field.errors %} has-error {% endif %}">
                         <label for="{{ field.id_for_label }}">
                             {% if field.field.required %}
-                            <span class="required">{{ field.label }} </span>
+                            <span class="required"> {{ field.label }} </span>
                             {% else %}
                             {{ field.label }}
                             {% endif %}
@@ -45,38 +43,35 @@
                     {{ formset.management_form }}
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <legend style="border-bottom: 1px solid #e5e5e5;">Produtos</legend>
-                    <div id="estoque" class="form-inline">
-                        {% for item_estoque_form in formset %}
-                        <div id="item-{{ forloop.counter0 }}" class="form-group">
-                            {{ item_estoque_form|bootstrap }}
-                        </div>
-                        {% endfor %}
-                    </div>
+
+            <h3 style="border-bottom: 1px solid #e5e5e5;">Produtos</h3>
+
+            <div id="estoque" class="form-inline">
+                {% for item_estoque_form in formset %}
+                <div id="item-{{ forloop.counter0 }}" class="form-group">
+                    {{ item_estoque_form|bootstrap }}
                 </div>
+                {% endfor %}
             </div>
 
             <span id="add-item" class="btn btn-info" style="margin-top: 10px;">
-            <i class="fa fa-plus"></i>Adicionar
-        </span>
+                <i class="fa fa-plus"></i> Adicionar
+            </span>
             <div class="row float-right">
                 <div class="col-sm-12" style="margin-top: 10px;">
-                    <div class="form-inline buttons">
-                        <button class="btn btn-primary" value="Save">
-                            <i class="fa fa-floppy-o"></i>Salvar
-                        </button>
-                        <a href="{% url 'entrada:estoque_entrada_list' %}" class="btn btn-danger" id="cancelar-btn">
-                            <i class="fa fa-times"></i>
-                            Cancelar
-                        </a>
-                    </div>
+                    <button class="btn btn-primary" value="Save">
+                        <i class="fa fa-floppy-o"></i> Salvar
+                    </button>
+                    <a href="{% url 'entrada:estoque_entrada_list' %}" class="btn btn-success" id="cancelar-btn">
+                        <i class="fa fa-times"></i>
+                        Cancelar
+                    </a>
                 </div>
             </div>
         </form>
     </div>
 </div>
+
 {% endif %}
 {% endblock content %}
 
@@ -88,8 +83,11 @@
             window.history.back();
         });
     });
+
+
+
 </script>
-<script >
+<script>
     $(document).ready(function() {
 
     //insere classe no primeiro item do produto
@@ -99,7 +97,7 @@
     //$('#id_estoque-0-saldo').prop('type', 'hidden')
     //Cria um spam para mostrar saldo na tela
     $('label[for="id_estoque-0-saldo"]').append('<span id="id_estoque-0-saldo-span" class="lead" style="padding-left: 10px;"></span>')
-     //Cria um spam para mostrar saldo na tela
+    //Cria um spam para mostrar saldo na tela
     $('label[for="id_estoque-0-saldo"]').append('<input id="id_estoque-0-inicial" class="form-control" type="hidden"/>')
     //Select2
     $('.clProduto').select2()
@@ -179,6 +177,9 @@
         //Atribui o saldo ao campo 'id_estoque-x-saldo-span'
         $('#'+campo2).text(saldo)
     });
+
+
+
 </script>
 
 <script type="text/html" id="item-estoque">
