--- a/projeto/core/static/css/loginStyle.css
+++ b/projeto/core/static/css/loginStyle.css
@@ -39,7 +39,7 @@ body{
 .shape:last-child{
     background: linear-gradient(
         to right,
-        #ff512f,
+        #099c22,
         #f09819
     );
     right: -80px;
@@ -47,7 +47,7 @@ body{
 }
 
 form{
-    height: 565px;
+    height: 585px;
     width: 450px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
