--- a/projeto/core/static/css/style.css
+++ b/projeto/core/static/css/style.css
@@ -11,6 +11,7 @@ body{
 .navigation{
     position: relative;
     min-height: 100vh;
+    height: auto;
     background: linear-gradient(
         #080710,
         #23a2f6
@@ -106,7 +107,8 @@ body{
 
 .background{
     width: 1260px;
-    height: 800px;
+    min-height: 800px;
+    height: auto;
     position: absolute;
     transform: translate(-50%,-50%);
     left: 50%;
@@ -141,7 +143,8 @@ body{
 
 form{
     width: 1260px;
-    height: 800px;
+    min-height: 800px;
+    height: auto;
     background-color: rgba(255,255,255,0.13);
     transform: translate(-50%,-50%);
     position: absolute;
@@ -169,8 +172,6 @@ form h3{
     text-align: center;
 }
 
-
-
 .row{
     position: 100vh;
     left: 100vh;
@@ -180,9 +181,9 @@ form h3{
     display: flex;
 }
 
-
-
-
+form input{
+    color: #000000;
+}
 
 
 
