--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -147,7 +147,7 @@
             </ul>
         </li>
         <li class="list">
-            <a href="#">
+            <a href="{% url 'usuarios:atualizar_cadastro' %}">
                 <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
                 <span class="title">Configurações</span>
             </a>
