--- a/projeto/relatorio/templates/relatorio_cliente.html
+++ b/projeto/relatorio/templates/relatorio_cliente.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
+{% csrf_token %}
 {% block content %}
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <div class="limiter">
     {% if user.is_authenticated %}
     <div id="relatorio_itens">
+
         <span class="login100-form-title pb-3">
             <h3>Lista de Clientes Cadastrados</h3>
         </span>
@@ -57,7 +59,7 @@
         var a = window.open('', '', 'height=600px, width=1000px');
         a.document.write('<html>');
         a.document.write('<head>');
-        a.document.write('<link rel="stylesheet" href="../static/css/listas/listas.css">');
+
         a.document.write('<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">');
         a.document.write('<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"><' + '/script>');
         a.document.write('</head>');
@@ -69,11 +71,6 @@
 
         setTimeout(function () { a.print(); }, 1000);
     }
-
-
-
-
-
 
 </script>
 {% endblock js %}
