--- a/projeto/usuarios/templates/login.html
+++ b/projeto/usuarios/templates/login.html
@@ -25,11 +25,11 @@
     <h3>Faça o Login Aqui</h3>
     {% csrf_token %}
     {% if messages %}
-    {% for i in messages %}
-    <div class="alert {{i.tags}}" role="alert">
-        {{i}}
-    </div>
-    {% endfor %}
+        {% for i in messages %}
+            <div class="alert {{i.tags}} text-center" role="alert">
+                {{i}}
+            </div>
+        {% endfor %}
     {% endif %}
 
     <label for="username">Nome de Usuário</label>
@@ -37,7 +37,7 @@
 
     <label for="password">Senha</label>
     <input type="password" placeholder="Senha" id="password" name="senha">
-
+    <a href="{% url 'usuarios:esqueceu_senha_login' %}">esqueci a senha</a>
     <button type="submit">Iniciar Sessão</button>
     <!--        <input type="button" value="">-->
     <div class="social">
@@ -45,6 +45,7 @@
         <div class="fb"><i class="fab fa-facebook"></i> Facebook</div>
     </div>
     <a href="{% url 'usuarios:cadastro' %}">Criar Conta</a>
+
 </form>
 {% endblock 'conteudo'%}
 
