formulario cliente formatado

--- a/projeto/cliente/templates/cliente_detail.html
+++ b/projeto/cliente/templates/cliente_detail.html
@@ -10,7 +10,7 @@
             <tbody>
             <tr>
                 <th class="text-right"> Telefone</th>
-                <td>R$ {{ object.telefone }}</td>
+                <td> {{ object.telefone }}</td>
             </tr>
             <tr>
                 <th class="text-right"> Cep</th>
