--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -168,7 +168,9 @@
 <form method="POST">
     {% block content %} {% endblock content %}
 </form>
-
+<div class="form">
+    {% block relatorio %} {% endblock relatorio %}
+</div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
