DASHBOARD  CHART.JS

--- a/saida/templates/estoque_saida_detail.html
+++ b/saida/templates/estoque_saida_detail.html
@@ -28,6 +28,8 @@
                 <th>Produto</th>
                 <th>Quantidade</th>
                 <th>Saldo</th>
+                <th>Valor Total</th>
+                <th>Data</th>
             </tr>
             </thead>
             <tbody>
@@ -36,6 +38,8 @@
                 <td>{{ obj.produto }}</td>
                 <td>{{ obj.quantidade }}</td>
                 <td>{{ obj.saldo }}</td>
+                <td>{{ obj.valor_total }}</td>
+                <td>{{ obj.data }}</td>
             </tr>
 
             {% endfor %}
